--- a/Sistema_control/Properties/Resources.resx
+++ b/Sistema_control/Properties/Resources.resx
@@ -118,7 +118,40 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Recurso 3@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 3@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 8@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 8@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 9@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 9@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 10@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 10@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 4@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 4@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 5@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 5@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 7@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 7@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 1@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 1@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 6@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 6@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="bars" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\assets\PNG\bars.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 2@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 2@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Recurso 11@3x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Recurso 11@3x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
